Updated the hub.scss to ensure titles are visible in the latest resources columns

--- a/assets/css/app/hub.scss
+++ b/assets/css/app/hub.scss
@@ -95,7 +95,7 @@ span.post-title {
     display: block;
     padding: 10px;
     font-size: 12px;
-    height: 40px;
+    height: auto;
     overflow: hidden;
 }
 li.list-group-item.fly.show-block {
